--- a/VSC/Config.ini
+++ b/VSC/Config.ini
@@ -1,16 +1,16 @@
 [VSTAR_SCHEMA_FILES]
-../../../VSTAR/Common/Common1.xds
-../../../VSTAR/Common/Common2.xds
+..\..\..\VSTAR\Common\Common1.xds
+..\..\..\VSTAR\Common\Common2.xds
 
 [VSTAR_SCHEMA_IMPORT_FILES]
-../../../VSTAR/Common/Common3.xds
+..\..\..\VSTAR\Common\Common3.xds
 
 [VSTAR_XML_FILES]
-../../VSTAR/Common/Module1.arxml
-../../VSTAR/Common/Module2.arxml
-../../VSTAR/Common/Module3.arxml
+..\..\VSTAR\Common\Module1.arxml
+..\..\VSTAR\Common\Module2.arxml
+..\..\VSTAR\Common\Module3.arxml
 
 [WORKSPACE_FOLDERS]
-../../DbcConfig
-../../EcuConfig
-../../SWConfig
+..\VSC_testbench\DbcConfig
+..\VSC_testbench\EcuConfig
+..\VSC_testbench\SWConfig
