增强脚本处理异常的能力

--- a/VSC/Config.ini
+++ b/VSC/Config.ini
@@ -10,7 +10,9 @@
 ..\..\VSTAR\Common\Module2.arxml
 ..\..\VSTAR\Common\Module3.arxml
 
-[WORKSPACE_FOLDERS]
+[WORKSPACE_BSW_FOLDERS]
 ..\VSC_testbench\DbcConfig
 ..\VSC_testbench\EcuConfig
+
+[WORKSPACE_ASW_FOLDERS]
 ..\VSC_testbench\SWConfig
